--- a/1-knapsack/CMakeLists.txt
+++ b/1-knapsack/CMakeLists.txt
@@ -2,9 +2,10 @@ add_executable(1-knapsack
   context.cpp
   knapsack.cpp
   main.cpp)
+
 target_link_libraries(
   1-knapsack
   PRIVATE project_warnings
           project_options
           await
-)
+          pthread)
