layout: move code to src

--- a/1-knapsack/CMakeLists.txt
+++ b/1-knapsack/CMakeLists.txt
@@ -1,12 +1,1 @@
-add_executable(1-knapsack
-  context.cpp
-  knapsack.cpp
-  main.cpp
-  solver.cpp)
-
-target_link_libraries(
-  1-knapsack
-  PRIVATE project_warnings
-          project_options
-          await
-          pthread)
+add_subdirectory(src)
